<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:squadleader="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/add_layer_from_web"
        android:icon="@drawable/ic_add_content"
        android:title="@string/add_layer_from_web"
        squadleader:showAsAction="ifRoom" />
    <item android:id="@+id/clear_messages"
        android:icon="@drawable/ic_action_discard"
        android:title="@string/clear_messages"
        squadleader:showAsAction="ifRoom" />
    <item android:id="@+id/go_to_mgrs"
        android:icon="@drawable/ic_action_place"
        android:title="@string/go_to_mgrs"
        squadleader:showAsAction="ifRoom" />
    <item android:id="@+id/toggle_labels"
        android:icon="@drawable/ic_action_labels"
        android:title="@string/toggle_labels"
        android:checkable="true"
        squadleader:showAsAction="ifRoom" />
    <item android:id="@+id/set_location_mode" android:title="@string/set_location_mode" />
    <item android:id="@+id/settings" android:title="@string/settings" />
</menu>