<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context=".SquadLeaderActivity"
    >
    <com.esri.android.map.MapView
        android:id="@+id/map"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        initExtent = "7730000 3970000 8010000 4300000">
    </com.esri.android.map.MapView>

    <ImageButton
        android:id="@+id/imageButton_openBasemapPanel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/selector_basemap"
        android:contentDescription="@string/open_basemap_panel"
        android:onClick="imageButton_openBasemapPanel_clicked"/>

    <ImageButton
        android:id="@+id/imageButton_openMapMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/selector_open_menu"
        android:contentDescription="@string/map_menu"
        android:onClick="imageButton_openMapMenu_clicked"/>

    <ToggleButton
        android:id="@+id/toggleButton_grid"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/imageButton_openMapMenu"
        android:layout_alignBottom="@+id/imageButton_openMapMenu"
        android:layout_marginLeft="5dp"
        android:background="@drawable/selector_grid"
        android:textOn=""
        android:textOff=""
        android:contentDescription="@string/toggle_grid"
        android:onClick="toggleButton_grid_clicked"/>
    
    <com.esri.squadleader.view.NorthArrowView
        android:id="@+id/northArrowView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/imageButton_zoomIn"
        android:layout_margin="5dp"
        android:background="@drawable/ic_north_arrow"
        android:contentDescription="@string/north_arrow_desc"
        android:onClick="northArrowView_clicked"/>

    <ImageButton
        android:id="@+id/imageButton_zoomIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_above="@+id/imageButton_zoomOut"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/selector_zoom_in"
        android:contentDescription="@string/zoom_in"
        android:onClick="imageButton_zoomIn_clicked"/>

    <ImageButton
        android:id="@+id/imageButton_zoomOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/selector_zoom_out"
        android:contentDescription="@string/zoom_out"
        android:onClick="imageButton_zoomOut_clicked"/>

    <ToggleButton
        android:id="@+id/toggleButton_followMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/imageButton_zoomOut"
        android:layout_alignParentBottom="true"
        android:layout_margin="5dp"
        android:background="@drawable/selector_follow_me"
        android:textOn=""
        android:textOff=""
        android:contentDescription="@string/follow_me"
        android:onClick="toggleButton_followMe_clicked"/>
    
    <TableLayout
        android:id="@+id/tableLayout_display"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_toRightOf="@+id/toggleButton_grid"
        android:layout_toLeftOf="@+id/toggleButton_followMe"
        android:layout_alignTop="@+id/toggleButton_followMe"
        android:layout_alignBottom="@+id/toggleButton_followMe"
        android:layout_marginLeft="5dp"
        android:background="@drawable/location_display_background">
        
        <TableRow
            android:layout_width="fill_parent"
            android:layout_weight=".5">
            <TextView
                android:id="@+id/textView_displayLocation"
                android:text="@string/display_location"
                android:textColor="#4D4D4D"
                android:layout_weight=".5"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:id="@+id/textView_displaySpeed"
                android:text="@string/display_speed"
                android:textColor="#4D4D4D"
                android:layout_weight=".5"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"/>
        </TableRow>
        <TableRow
            android:layout_weight=".5">
            <TextView
                android:id="@+id/textView_displayHeading"
                android:text="@string/display_heading"
                android:textColor="#4D4D4D"
                android:layout_weight=".5"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="5dp"/>
            <TextView
                android:id="@+id/textView_displayTime"
                android:text="@string/display_time"
                android:textColor="#4D4D4D"
                android:layout_weight=".5"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dp"/>
        </TableRow>
                
    </TableLayout>
    
</RelativeLayout>
